--- a/js/test/layout.css
+++ b/js/test/layout.css
@@ -85,7 +85,7 @@ body {
 	letter-spacing:1px;
 }
 
-th {
+#FOOTER th {
 	font: bold 11px "Trebuchet MS", Verdana, Arial, Helvetica,
 	sans-serif;
 	color: #6D929B;
@@ -99,7 +99,7 @@ th {
 	background: #CAE8EA url(images/bg_header.jpg) no-repeat;
 }
 
-th.nobg {
+#FOOTER th.nobg {
 	border-top: 0;
 	border-left: 0;
 	border-right: 1px solid #C1DAD7;
@@ -110,7 +110,7 @@ The headers on the left that appear as rows (the specification headers) have alt
 
 The table cells that hold the technical specifications of each Power Mac G5 also have alternating styles:
 
-td {
+#FOOTER td {
 	border-right: 1px solid #C1DAD7;
 	border-bottom: 1px solid #C1DAD7;
 	background: #fff;
@@ -119,7 +119,7 @@ td {
 }
 
 
-td.alt {
+#FOOTER td.alt {
 	background: #F5FAFA;
 	color: #B4AA9D;
 }
