--- a/js/test/layout.css
+++ b/js/test/layout.css
@@ -6,25 +6,24 @@ body {
 }
 #HEADER {
 	margin:0 auto;
-	width:900px;
+	width:800px;
 	height:80px;
 }
 #HEADER h1 {
 }
 #WRAPPER {
 	margin:0 auto;
-	width:880px;
-	padding:0 10px;
+	width:800px;
 	overflow:auto;
 }
 #CONTENT {
-	margin-left:300px;
+	margin-left:400px;
 	_height:1%;
 	padding-top:15px;
 	padding-bottom:25px;
 }
 #CONTENT .BOX {
-	width:650px;
+	width:400px;
 	margin:0 auto;
 	margin-bottom:10px;
 }
@@ -46,12 +45,12 @@ body {
 }
 #SIDE {
 	float:left;
-	width:170px;
-    height: 700px;
+	width:400px;
+    height: 300px;
 	padding-top:15px;
 }
 #SIDE .BOX {
-	width:650px;
+	width:400px;
 	margin:0 auto;
 	margin-bottom:10px;
 }
@@ -72,7 +71,7 @@ body {
 	clear:both;
 	_height:1%;
 	margin:0 auto;
-	width:900px;
+	width:800px;
 	height:121px;
 
 }
@@ -86,12 +85,10 @@ body {
 }
 
 #FOOTER th {
-	font: bold 11px "Trebuchet MS", Verdana, Arial, Helvetica,
+	font: bold 11px ;
 	sans-serif;
 	color: #6D929B;
-	border-right: 1px solid #C1DAD7;
-	border-bottom: 1px solid #C1DAD7;
-	border-top: 1px solid #C1DAD7;
+	border: 1px solid #C1DAD7;
 	letter-spacing: 2px;
 	text-transform: uppercase;
 	text-align: left;
@@ -100,9 +97,6 @@ body {
 }
 
 #FOOTER th.nobg {
-	border-top: 0;
-	border-left: 0;
-	border-right: 1px solid #C1DAD7;
 	background: none;
 }
 The headers on the left that appear as rows (the specification headers) have alternating styles:
@@ -111,8 +105,8 @@ The headers on the left that appear as rows (the specification headers) have alt
 The table cells that hold the technical specifications of each Power Mac G5 also have alternating styles:
 
 #FOOTER td {
-	border-right: 1px solid #C1DAD7;
-	border-bottom: 1px solid #C1DAD7;
+	border: 1px solid #C1DAD7;
+
 	background: #fff;
 	padding: 6px 6px 6px 12px;
 	color: #6D929B;
@@ -120,6 +114,7 @@ The table cells that hold the technical specifications of each Power Mac G5 also
 
 
 #FOOTER td.alt {
+	border: 1px solid #C1DAD7;
 	background: #F5FAFA;
 	color: #B4AA9D;
 }
